--- a/pages/html/main.html
+++ b/pages/html/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <h1>메인페이지 타이틀</h1>
