main.page에서 뒤로가기 구현 해야함

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <body>
   <h1>Welcome</h1>
   <div class="button-container">
-    <button onclick="location.href='/html/group-list.html'">그룹 확인</button>
-    <button onclick="location.href='/html/main.html'">데이터 추가하기</button>
+    <button onclick="location.href='/html/group-list.html'">Group List</button>
+    <button onclick="location.href='/html/main.html'">Add Data</button>
   </div>
 </body>
 </html>
