--- a/pages/html/group-list.html
+++ b/pages/html/group-list.html
@@ -35,9 +35,24 @@
       border: none;
       border-radius: 5px;
     }
+    .back-button {
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .back-button:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
+  <button class="back-button" id="back-button">뒤로가기</button>
   <h1>Group List</h1>
   <div class="group-list" id="group-list"></div>
   <div class="group-data" id="group-data"></div>
