--- a/pages/html/schedule.html
+++ b/pages/html/schedule.html
@@ -29,9 +29,24 @@
     td[data-overlap="4"] {
       background-color: #409040;
     }
+    .back-button {
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .back-button:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 <body>
+  <button class="back-button" id="back-button">뒤로가기</button>
   <h1>Group Schedule</h1>
   <div id="schedule"></div>
   <script src="../js/schedule.js"></script>
