--- a/pages/html/main.html
+++ b/pages/html/main.html
@@ -3,53 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Availability Table</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-    th, td {
-      border: 1px solid black;
-      text-align: center;
-      padding: 8px;
-    }
-    input[type="checkbox"] {
-      width: 20px;
-      height: 20px;
-    }
-  </style>
+  <title>Add Data</title>
+  <link rel="stylesheet" href="../css/main.css">
+
 </head>
 <body>
-  <h1>Set Availability</h1>
-  <form id="availability-form">
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
+  <h1>Add Data</h1>
+  <div class="container">
+    <button class="back-button" id="back-button">뒤로가기</button>
+    <form id="availability-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-    <label for="phone">Phone Number:</label>
-    <input type="text" id="phone" name="phone" required><br><br>
+      <label for="phone">Phone Number:</label>
+      <input type="text" id="phone" name="phone" placeholder="Enter your phone number" required>
 
-    <label for="group">Group Name:</label>
-    <input type="text" id="group" name="group" required><br><br>
+      <label for="group">Group Name:</label>
+      <input type="text" id="group" name="group" placeholder="Enter group name" required>
 
-    <table>
-      <tr>
-        <th>Time/Day</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wednesday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-        <th>Saturday</th>
-        <th>Sunday</th>
-      </tr>
-      <!-- Generate 24 rows for each hour -->
-      <tbody id="availability-table"></tbody>
-    </table>
+      <table>
+        <tr>
+          <th>Time/Day</th>
+          <th>Monday</th>
+          <th>Tuesday</th>
+          <th>Wednesday</th>
+          <th>Thursday</th>
+          <th>Friday</th>
+          <th>Saturday</th>
+          <th>Sunday</th>
+        </tr>
+        <tbody id="availability-table"></tbody>
+      </table>
 
-    <br>
-    <button type="submit">Save</button>
-  </form>
+      <button type="submit" class="submit-button">Save</button>
+    </form>
+  </div>
+  <script>
+    // 뒤로가기 버튼 클릭 시 index.html로 이동
+    document.getElementById("back-button").addEventListener("click", () => {
+      window.location.href = "/html/index.html"; // index.html로 이동
+    });
+  </script>
   <script src="../js/script.js"></script>
 </body>
 </html>
