--- a/pages/html/schedule.html
+++ b/pages/html/schedule.html
@@ -4,51 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group Schedule</title>
-  <style>
-    table {
-      border-collapse: collapse;
-      width: 100%;
-    }
-    th, td {
-      border: 1px solid black;
-      text-align: center;
-      padding: 8px;
-    }
-    td {
-      background-color: #f0f0f0;
-    }
-    td[data-overlap="1"] {
-      background-color: #d0f0d0;
-    }
-    td[data-overlap="2"] {
-      background-color: #a0d0a0;
-    }
-    td[data-overlap="3"] {
-      background-color: #70b070;
-    }
-    td[data-overlap="4"] {
-      background-color: #409040;
-    }
-    .back-button {
-      margin-bottom: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    .back-button:hover {
-      background-color: #0056b3;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/schedule.css">
+
 </head>
 <body>
-  <button class="back-button" id="back-button">뒤로가기</button>
   <h1>Group Schedule</h1>
-  <div id="schedule"></div>
+  <div class="container">
+    <button class="back-button" id="back-button">뒤로가기</button>
+    <div id="schedule">
+      <p class="no-data">Loading schedule...</p>
+    </div>
+  </div>
+
   <script src="../js/schedule.js"></script>
 </body>
 </html>
