--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -11,7 +11,8 @@
   <h1>Welcome</h1>
   <div class="button-container">
     <button onclick="location.href='/html/group-list.html'">Group List</button>
-    <button onclick="location.href='/html/main.html'">Add Data</button>
+    <button onclick="location.href='/html/add-data.html'">Add Data</button>
+    <button onclick="location.href='/html/find.html'">find</button>
   </div>
 </body>
 </html>
