--- a/pages/html/group-list.html
+++ b/pages/html/group-list.html
@@ -5,14 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group List</title>
   <link rel="stylesheet" href="../css/group-list.css">
-
 </head>
 <body>
   <h1>Group List</h1>
   <div class="container">
     <button class="back-button" id="back-button">뒤로가기</button>
+    <div>
+      <label for="group-search">Search Group:</label>
+      <input type="text" id="group-search" placeholder="Enter group name" />
+      <button id="search-button">Search</button>
+    </div>
     <div class="group-list" id="group-list">
-      <p>Loading group list...</p>
+      <p>Please enter a group name to search.</p>
+    </div>
+    <div class="code-prompt" id="code-prompt" style="display: none;">
+      <label for="group-code">Enter Group Code:</label>
+      <input type="text" id="group-code" placeholder="Enter group code" />
+      <button id="code-submit-button">Submit Code</button>
     </div>
     <div class="group-data" id="group-data"></div>
   </div>
