--- a/pages/html/schedule.html
+++ b/pages/html/schedule.html
@@ -5,14 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group Schedule</title>
   <link rel="stylesheet" href="../css/schedule.css">
-
 </head>
 <body>
   <h1>Group Schedule</h1>
   <div class="container">
-    <button class="back-button" id="back-button">뒤로가기</button>
+    <div class="button-row">
+      <button class="back-button" id="back-button">뒤로가기</button>
+
+      <button class="reverse-btn" id="reverse-btn">Reverse Schedule</button>
+      <button class="filter-button" id="filter-button">Filter</button>
+    </div>
     <div id="schedule">
       <p class="no-data">Loading schedule...</p>
+    </div>
+    <div id="filter-panel" class="hidden">
+      <h2>Filter Members</h2>
+      <div id="member-list">
+        <p>Loading members...</p>
+      </div>
+      <button id="apply-filter" class="apply-filter-btn">Apply Filter</button>
     </div>
   </div>
 
