--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -12,7 +12,8 @@
   <div class="button-container">
     <button onclick="location.href='/html/group-list.html'">Group List</button>
     <button onclick="location.href='/html/add-data.html'">Add Data</button>
-    <button onclick="location.href='/html/find.html'">find</button>
+    <button onclick="location.href='/html/find.html'">Find</button>
+    
   </div>
 </body>
 </html>
