--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -13,6 +13,7 @@
     <button onclick="location.href='/html/group-list.html'">Group List</button>
     <button onclick="location.href='/html/add-data.html'">Add Data</button>
     <button onclick="location.href='/html/find.html'">find</button>
+    <button onclick="location.href='/html/view-list.html'">view group</button>
   </div>
 </body>
 </html>
