--- a/pages/html/find.html
+++ b/pages/html/find.html
@@ -4,73 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Group</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    .container {
-      max-width: 600px;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      text-align: center;
-      color: #007bff;
-    }
-
-    label {
-      font-size: 1rem;
-      margin-bottom: 5px;
-      display: block;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #dee2e6;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      background-color: #007bff;
-      color: white;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    .result {
-      margin-top: 20px;
-      font-size: 1.2rem;
-      color: #343a40;
-    }
-
-    .no-result {
-      color: #dc3545;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/find.css">
 </head>
 <body>
   <div class="container">
@@ -88,7 +22,6 @@
   </div>
   <script src="../js/find.js"></script>
   <script>
-    // 뒤로가기 버튼 클릭 시 index.html로 이동
     document.getElementById("back-button").addEventListener("click", () => {
       window.location.href = "/html/index.html"; // index.html로 이동
     });
