--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -10,9 +10,9 @@
 <body>
   <h1>Welcome</h1>
   <div class="button-container">
-    <button onclick="location.href='/html/group-list.html'">Group List</button>
-    <button onclick="location.href='/html/add-data.html'">Add Data</button>
-    <button onclick="location.href='/html/find.html'">Find</button>
+    <button onclick="location.href='/html/group-list.html'">내 시간표 입력</button>
+    <button onclick="location.href='/html/add-data.html'">모임 참여&빈 시간 찾기</button>
+    <button onclick="location.href='/html/find.html'">내가 들어간 모임 찾기</button>
     
   </div>
 </body>
