--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -14,8 +14,8 @@
         h1 {
             background-color: #a6c498;
             color: #ffffff;
-            padding: 15px 80px;
-            font-size: 45px;
+            padding: 15px 35px;
+            font-size: 30px;
             text-align: center;
             margin-bottom: 0 0 80px 0;
             border-radius: 5px;
@@ -23,7 +23,7 @@
 
         .button-container {
             background-color: #a6c498;
-            padding: 50px 80px;
+            padding: 30px 40px;
             border-radius: 5px;
             display: flex;
             justify-content: center;
@@ -38,7 +38,7 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 25px;
+            font-size: 20px;
             border-radius: 5px;
             transition: background-color 0.3s ease;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-    <h1>Welcome~\(^^)/</h1>
+    <h1>Welcome Match Schedule</h1>
     <div class="button-container">
         <button onclick="location.href='/html/group-list.html'">모임별 시간표 확인</button>
         <button onclick="location.href='/html/add-data.html'">시간표 입력</button>
