--- a/pages/html/group-list.html
+++ b/pages/html/group-list.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="../css/group-list.css">
 </head>
 <body>
-  <h1>Group List</h1>
+  <h1>모임 찾기&모임 추가</h1>
   <div class="container">
-    <button class="back-button" id="back-button">뒤로가기</button>
+    <div class="button-container">
+      <button class="back-button" id="back-button">뒤로가기</button>
+      <button class="add-button" id="add-button">모임 추가</button>
+    </div>
     <div>
       <label for="group-search">Search Group:</label>
       <input type="text" id="group-search" placeholder="Enter group name" />
@@ -29,6 +32,11 @@
     // 뒤로가기 버튼 클릭 시 index.html로 이동
     document.getElementById("back-button").addEventListener("click", () => {
       window.location.href = "/html/index.html"; // index.html로 이동
+    });
+
+    // 모임 추가 버튼 클릭 시 add-group.html로 이동
+    document.getElementById("add-button").addEventListener("click", () => {
+      window.location.href = "/html/add-group.html"; // add-group.html로 이동
     });
   </script>
   <script src="../js/group-list.js"></script>
