close #52 - 과거 comment 기능 가져오기

--- a/pages/html/group-list.html
+++ b/pages/html/group-list.html
@@ -33,13 +33,14 @@
   </script>
   <script src="../js/group-list.js"></script>
 
-  <div id="comment_section">
-    <div id="comment-section"></div>
+  <div id="comment_part">
+    
     <form id="comment-form">
         <input type="text" id="username" placeholder="Your Name" required>
         <textarea id="comment" placeholder="Your Comment" required></textarea>
         <button type="submit">Add Comment</button>
     </form>
+    <div id="comment_section"></div>
     </div>
 </div>
 
