--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -12,10 +12,9 @@
 <body>
     <h1>Welcome Match Schedule</h1>
     <div class="button-container">
-        <button onclick="location.href='/html/group-list.html'">모임별 시간표 확인</button>
         <button onclick="location.href='/html/add-data.html'">시간표 입력</button>
         <button onclick="location.href='/html/find.html'">인원별 참여 모임 검색</button>
-        <button onclick="location.href='/html/view-list.html'">나의 모임 확인</button>
+        <button onclick="location.href='/html/view-list.html'">모임 목록</button>
     </div>
 </body>
 
