--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -12,9 +12,9 @@
 <body>
     <h1>Welcome Match Schedule</h1>
     <div class="button-container">
-        <button onclick="location.href='/html/add-data.html'">시간표 입력</button>
-        <button onclick="location.href='/html/find.html'">인원별 참여 모임 검색</button>
-        <button onclick="location.href='/html/view-list.html'">모임 목록</button>
+        <button onclick="location.href='/html/add-data.html'">신규 모임 생성</button>
+        <button onclick="location.href='/html/find.html'">내 그룹 찾기</button>
+        <button onclick="location.href='/html/view-list.html'">모임 목록 & 가입</button>
     </div>
 </body>
 
