--- a/pages/html/find.html
+++ b/pages/html/find.html
@@ -18,6 +18,9 @@
         <label for="search-phone">전화번호 :</label>
         <input type="text" id="search-phone" placeholder="Enter phone number" required>
 
+        <label for="search-group">그룹명 :</label>
+        <input type="text" id="search-group" placeholder="Enter group name" required>
+
         <button id="search-button">검색</button>
 
         <div id="result" class="result"></div>
