--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -16,6 +16,10 @@
         <button onclick="location.href='/html/find.html'">내 그룹 찾기</button>
         <button onclick="location.href='/html/view-list.html'">모임 목록 & 가입</button>
     </div>
+     <!-- Help Button -->
+     <button class="help-button" onclick="alert('help')">
+        help
+    </button>
 </body>
 
 </html>
