--- a/pages/html/group-list.html
+++ b/pages/html/group-list.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Group List</title>
   <link rel="stylesheet" href="../css/group-list.css">
+  <link rel="stylesheet" href="../css/comment.css">
 </head>
 <body>
   <h1>모임 찾기&모임 추가</h1>
