--- a/pages/html/view-list.html
+++ b/pages/html/view-list.html
@@ -12,7 +12,7 @@
     <h1>모임 목록</h1>
     <div class="container">
         <button class="back-button" id="back-button">뒤로가기</button>
-        <button class="action-button" id="add-group-button" onclick="location.href='/html/group-list.html'">모임
+        <button class="action-button" id="add-group-button" onclick="location.href='/html/add-data.html'">모임
             추가</button>
 
         <!-- 검색창 추가 -->
