--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -14,8 +14,9 @@
     <h1>Welcome Match Schedule</h1>
     <div class="button-container">
         <button onclick="location.href='/html/add-data.html'">신규 모임 생성</button>
-        <button onclick="location.href='/html/find.html'">내 그룹 찾기</button>
+        <button onclick="location.href='/html/group-list.html'">가입한 모임 목록</button>
         <button onclick="location.href='/html/view-list.html'">모임 목록 & 가입</button>
+        <button onclick="location.href='/html/find.html'">내 그룹 찾기</button>
     </div>
 
     <!-- Help Button -->
